  The algorithm incorrectly changed the hour of day when certain DST dates were hit.
  The new algorithm avoids an IllegalInstantException when moving to a DST gap.

- Fix Period.parse() [#238]
  Negative periods of a fraction of a second were not parsed correctly.

- Format Etc/GMT time-zone using GMT data [#244]
  This change will provide better text formats for pattern letter 'z'.


Scala
--------
Joda-Time uses annotations from Joda-Convert.
In the Java programming language, this dependency is optional, however in Scala it is not.
Scala users must manually add the Joda-Convert v1.2 dependency.

- Fix validation in BasicChronology.getDateTimeMillis
 Previously this allowed a millisOfDay value one too large

- Javadoc fix to MutablePeriod [3413869]

- Fixed Spanish translation of day - dia now has accented i
  https://github.com/JodaOrg/joda-time/pull/5

- DateTimeZone.forOffsetHoursMinutes failed to allow offsets from -00:01 to -00:59 [#42]
  The forOffsetHoursMinutes() method could not create an offset  from -00:01 to -00:59
  This was due to an inappropriate design
  A backwards compatible change to the input handling has been made
  forOffsetHoursMinutes(0, -15) now creates -00:15

- DateTimeFormatter.parseInto [#21]
  Fix parseInto() where it obtains the default year for parsing from the ReadWritableInstant
  Previously, the wrong year could be obtained at the start or end of the year in non UTC zones
  Now obtains the year from the ReadWritableInstant using the chronology of the ReadWritableInstant

- Better thread-safety in ISODateTimeFormat [#45]

- Better Javadoc for thread saefty of DateTimeUtils [#67]

- Better Javadoc for DateTimeComparator [#73]

- Better Javadoc for DateTimeFormat fraction of second [#62]

- Fix deadlock [#171]
  Referencing DateTimeZone and FixedDateTimeZone from two threads at startup could deadlock
  Add package scoped UTCDateTimeZone class to avoid this

- Use of current time when converting from LocalDate [#177]